<resources>
    <string name="app_name">NUMAD22Sp_EshwariBhide</string>
    <string name="about_me">About Me</string>
    <string name="clicky_clicky">Clicky Clicky</string>
    <string name="a">A</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="b">B</string>
    <string name="f">F</string>
    <string name="pressed">Pressed: -</string>
    <string name="pressedA">Pressed: A</string>
    <string name="pressedB">Pressed: B</string>
    <string name="pressedC">Pressed: C</string>
    <string name="pressedD">Pressed: D</string>
    <string name="pressedE">Pressed: E</string>
    <string name="pressedF">Pressed: F</string>
    <string name="list_item_name" />
    <string name="list_item_value" />
    <string name="linkName" />
    <string name="linkValue" />
    <string name="enter_link_name">Enter Link Name</string>
    <string name="enter_link_value">Enter Link Value</string>
    <string name="finished">Finished</string>
</resources>